--- a/index.html
+++ b/index.html
@@ -1,171 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>GitFlow Practice</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>GitFlow Practice</title>
 
-		<link href="style.css" rel="stylesheet" />
-		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-			rel="stylesheet"
-			integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-			crossorigin="anonymous"
-		/>
+    <link href="style.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
 
-		<script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
-		<script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js"></script>
-	</head>
-	<body>
-		<section
-			class="container d-flex justify-content-center align-items-center gitflow-container"
-		>
-			<div class="row w-100">
-				<div class="col-6 d-flex justify-content-center align-items-center">
-					<button
-						type="button"
-						class="btn btn-primary"
-						data-bs-toggle="modal"
-						data-bs-target="#exampleModal-A"
-					>
-						Launch Hamster Young
-					</button>
-				</div>
-				<div class="col-6 d-flex justify-content-center align-items-center">
-					<button
-						type="button"
-						class="btn btn-primary"
-						data-bs-toggle="modal"
-						data-bs-target="#exampleModal-B"
-					>
-						Launch Formula 1 Race
-					</button>
-				</div>
-			</div>
-		</section>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-interactivity@latest/dist/lottie-interactivity.min.js"></script>
+  </head>
+  <body>
+    <section
+      class="container d-flex justify-content-center align-items-center gitflow-container"
+    >
+      <div class="row w-100">
+        <div class="col-6 d-flex justify-content-center align-items-center">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal-A"
+          >
+            Launch Hamster Young
+          </button>
+        </div>
+        <div class="col-6 d-flex justify-content-center align-items-center">
+          <button
+            type="button"
+            class="btn btn-primary"
+            data-bs-toggle="modal"
+            data-bs-target="#exampleModal-B"
+          >
+            Launch Formula 1 Race
+          </button>
+        </div>
+      </div>
+    </section>
 
-		<!-- Modal A -->
-		<div
-			class="modal fade"
-			id="exampleModal-A"
-			tabindex="-1"
-			aria-labelledby="exampleModalLabel"
-			aria-hidden="true"
+    <!-- Modal A -->
+    <div
+      class="modal fade"
+      id="exampleModal-A"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
       data-bs-backdrop="static"
-		>
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h1 class="modal-title fs-5" id="exampleModalLabel">
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">
               Click to play
             </h1>
-						<button
-							type="button"
-							class="btn-close"
-							data-bs-dismiss="modal"
-							aria-label="Close"
-						></button>
-					</div>
-					<div class="modal-body d-flex justify-content-center">
-						<lottie-player
-							id="firstLottie"
-							src="https://lottie.host/640a3945-48db-4c56-bbbc-8272e3253d47/NqthXpsM9F.json"
-							style="width: 400px; height: 400px"
-						></lottie-player>
-					</div>
-					<div class="modal-footer">
-						<button
-							type="button"
-							class="btn btn-secondary"
-							data-bs-dismiss="modal"
-						>
-							Close
-						</button>
-					</div>
-				</div>
-			</div>
-		</div>
-
-		<!-- Modal B -->
-		<div
-			class="modal fade"
-			id="exampleModal-B"
-			tabindex="-1"
-			aria-labelledby="exampleModalLabel"
-			aria-hidden="true"
-		>
-			<div class="modal-dialog">
-				<div class="modal-content">
-					<div class="modal-header">
-						<h1 class="modal-title fs-5" id="exampleModalLabel">Modal title</h1>
-						<button
-							type="button"
-							class="btn-close"
-							data-bs-dismiss="modal"
-							aria-label="Close"
-						></button>
-					</div>
-					<div class="modal-body">
-            <lottie-player
-							id="secondLottie"
-							src="https://lottie.host/f6a74d51-c031-4b0e-af08-a36056d3884d/0cHOoPlbvC.json"
-							style="width: 400px; height: 400px"
-						></lottie-player>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
           </div>
-					<div class="modal-footer">
-						<button
-							type="button"
-							class="btn btn-secondary"
-							data-bs-dismiss="modal"
-						>
-							Close
-						</button>
-						<button type="button" class="btn btn-primary">Save changes</button>
-					</div>
-				</div>
-			</div>
-		</div>
+          <div class="modal-body d-flex justify-content-center">
+            <lottie-player
+              id="firstLottie"
+              src="https://lottie.host/640a3945-48db-4c56-bbbc-8272e3253d47/NqthXpsM9F.json"
+              style="width: 400px; height: 400px"
+            ></lottie-player>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
 
-		<script>
-			LottieInteractivity.create({
-				player: '#firstLottie',
-				mode: 'cursor',
-				actions: [
-					{
-						type: 'click',
-						forceFlag: false,
-					},
-				],
-			})
-		</script>
-		
+    <!-- Modal B -->
+    <div
+      class="modal fade"
+      id="exampleModal-B"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h1 class="modal-title fs-5" id="exampleModalLabel">
+              Click to play
+            </h1>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body d-flex justify-content-center">
+            <lottie-player
+              id="secondLottie"
+              src="https://lottie.host/f6a74d51-c031-4b0e-af08-a36056d3884d/0cHOoPlbvC.json"
+              style="width: 400px; height: 400px"
+            ></lottie-player>
+          </div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-secondary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <script>
-			LottieInteractivity.create({
-				player: '#secondtLottie',
-				mode: 'cursor',
-				actions: [
-					{
-						type: 'click',
-						forceFlag: false,
-					},
-				],
-			})
-		</script>
+      LottieInteractivity.create({
+        player: "#firstLottie",
+        mode: "cursor",
+        actions: [
+          {
+            type: "click",
+            forceFlag: false,
+          },
+        ],
+      });
+    </script>
 
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-			integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-			crossorigin="anonymous"
-		></script>
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-			integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-			crossorigin="anonymous"
-		></script>
-	</body>
+    <script>
+      LottieInteractivity.create({
+        player: "#secondLottie",
+        mode: "cursor",
+        actions: [
+          {
+            type: "click",
+            forceFlag: false,
+          },
+        ],
+      });
+    </script>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
